force-app/main/default/objects/tc9_edc__Setup_Invoice_Tax_ID__mdt/tc9_edc__Setup_Invoice_Tax_ID__mdt.object-meta.xml
<CustomObject>
    <label>Setup Invoice Tax ID</label>
    <pluralLabel>Setup Invoice Tax IDs</pluralLabel>
</CustomObject>