force-app/main/default/objects/tc9_edc__Setup_Invoice_Tax_ID__mdt/fields/tc9_edc__Invoice_Tax_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Invoice_Tax_ID_Name__c</fullName>
    <label>Invoice Tax ID Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>