force-app/main/default/objects/tc9_edc__Setup_Invoice_Tax_ID__mdt/fields/tc9_edc__Owner__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Owner__c</fullName>
    <label>Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>