force-app/main/default/objects/tc9_edc__Setup_Invoice_Tax_ID__mdt/fields/tc9_edc__Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>